--- a/Whumpus.html
+++ b/Whumpus.html
@@ -48,7 +48,7 @@
 <body>
    
                 
-        <h1>Whmpus World - AI Agent</h1>        
+        <h1>Wumpus World - AI Agent</h1>        
 
         <div id="score">0</div>
         <div id="board"/>
@@ -158,7 +158,7 @@
                 setContent(elements.player,currentPosition.row,currentPosition.col)
             }      
             movePlayer(--i);
-        }, 500);
+        }, 5000);
     }
 
     function checkCoordinatesEqual(point1,point2) {
